--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.13.2",
     "body-parser": "^2.2.2",
     "dotenv": "^17.2.3",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^9.1.5"
   }
 }
