--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
-  "name": "gluco-sahayak-bot",
+  "name": "gluco-sahayak-whatsapp",
   "version": "1.0.0",
-  "type": "module",
-  "description": "",
-  "main": "index.js",
+  "description": "WhatsApp Business API integration for Gluco-Sahayak diabetes management chatbot",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
+  "keywords": [
+    "whatsapp",
+    "diabetes",
+    "healthcare",
+    "chatbot",
+    "ai"
+  ],
+  "author": "Your Team",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.13.2",
-    "body-parser": "^2.2.2",
-    "dotenv": "^17.2.3",
-    "express": "^4.19.2",
-    "mongoose": "^9.1.5"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
+    "node-schedule": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
