--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "gluco-sahayak-whatsapp",
-  "version": "1.0.0",
-  "description": "WhatsApp Business API integration for Gluco-Sahayak diabetes management chatbot",
+  "name": "gluco-sahayak-bot",
+  "version": "2.0.0",
+  "description": "AI-powered WhatsApp bot for diabetes management using Gemini AI",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "whatsapp",
     "diabetes",
     "healthcare",
-    "chatbot",
-    "ai"
+    "gemini-ai",
+    "chatbot"
   ],
-  "author": "Your Team",
+  "author": "Your Name",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
     "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "node-schedule": "^2.1.1"
+    "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3",
+    "@google/generative-ai": "^0.21.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=18.0.0"
   }
 }
