--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
   "name": "gluco-sahayak-bot",
-  "version": "2.0.0",
-  "description": "AI-powered WhatsApp bot for diabetes management using Gemini AI",
+  "version": "2.2.0",
+  "description": "AI-powered WhatsApp diabetes management bot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [
-    "whatsapp",
-    "diabetes",
-    "healthcare",
-    "gemini-ai",
-    "chatbot"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.2",
-    "mongoose": "^8.0.3",
+    "axios": "^1.6.7",
+    "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
     "@google/generative-ai": "^0.21.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.4.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3"
   },
   "engines": {
     "node": ">=18.0.0"
