--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "gluco-sahayak-bot",
-  "version": "2.2.0",
-  "description": "AI-powered WhatsApp diabetes management bot",
+  "version": "3.0.0",
+  "description": "AI-powered WhatsApp diabetes management bot with DeepSeek R1",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "keywords": [
+    "whatsapp",
+    "diabetes",
+    "healthcare",
+    "deepseek",
+    "ai"
+  ],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.7",
     "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
-    "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.4.1"
   },
   "devDependencies": {
