--- a/package.json
+++ b/package.json
@@ -1,32 +1,55 @@
 {
   "name": "gluco-sahayak-bot",
-  "version": "3.0.0",
-  "description": "AI-powered WhatsApp diabetes management bot with DeepSeek R1",
+  "version": "5.0.0",
+  "description": "WhatsApp diabetes bot with AI",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [
-    "whatsapp",
-    "diabetes",
-    "healthcare",
-    "deepseek",
-    "ai"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.7",
     "mongoose": "^8.1.1",
     "node-cron": "^3.0.3",
-    "dotenv": "^16.4.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+    "pdf-parse": "^1.1.1",
+    "gtts": "^0.2.1",
+    "form-data": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
+```
+
+5. **Commit** with message: "Fixed package.json"
+
+---
+
+### **Step 2: Did You Paste the server.js Code?**
+
+**After deleting the old server.js, did you paste the NEW code from `server-FINAL-PRODUCTION.js`?**
+
+If **NO**:
+1. Go back to GitHub server.js
+2. Click Edit
+3. Download `server-FINAL-PRODUCTION.js` file I shared
+4. Open it, copy ALL the code
+5. Paste into GitHub server.js
+6. Commit
+
+If **YES**, great! Just update package.json and it should work.
+
+---
+
+## **After Both Files Updated:**
+
+**Render will auto-deploy in 2 minutes.**
+
+**Check logs - should see:**
+```
+✅ MongoDB connected
+✅ Claude Sonnet 4 ready
+✅ Voice: ✅ FREE
+
+GLUCO SAHAYAK v5.0 FINAL
+Server ready!
